# conference-email-system

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Claude.md  LICENSE  README.md  claude_hist.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/app/: chair_router.py
backend/migrations/: env.py
backend/models/: calibration_keyword.joblib  rl_router_state.json
backend/reports/: e005_embed_repr.json  e007_tag_ablation.json  e008_embed_model_ablation.json  e008b_raw_query.json  e010_intent_prior.json  eval_20260630_172346.json  eval_20260630_172429.json  eval_20260630_174326.json  eval_5A_combined.json  eval_5A_expanded.json  eval_5B_baseline.json  eval_5B_calibrated.json  eval_5C_fusion_ablation.json  eval_6A_post.json  eval_6A_pre.json  eval_H_post_swap.json  eval_remap_verify.json  kb_intent_coverage.json  real_eval_20260716_203615.json  retrieval_only_5A.json
backend/scripts/: _kb_retriever.py  backfill_eval_drafts.py  bench_real.py  chunk_policies.py  distill_style_guide.py  draft_eval.py  e005_embed_repr.py  e007_tag_ablation.py  e008_embed_model_ablation.py  e008b_raw_query.py  e010_intent_prior_ablation.py  fit_calibration.py  ingest_sample_traffic.py  judge_testset.py  label_real_tickets.py  placeholder_eval.py  pull_zendesk_tickets.py  query_distill_ablation.py  run_eval.py  seed.py  seed_real_policies.py  testset.py  zendesk_scope_test.py
backend/tests/: conftest.py  test_active_learning.py  test_analytics_aggregates.py  test_audit_endpoint.py  test_calibration.py  test_calibration_analytics.py  test_chair_router.py  test_chair_routing_integration.py  test_chair_surface_counts.py  test_classifier.py  test_distiller.py  test_distiller_transcript.py  (+52 more)
(+240 files in other folders)
