[project]
name = "conference-email-system"
version = "0.1.0"
description = "Automated conference email reply & routing system (backend)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "anthropic>=0.34",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.0",
    "python-dateutil>=2.9",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "scikit-learn>=1.4",
    "sentence-transformers>=3.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
